Fix blockquote issue in Conventions.po in all languages
git-svn-id: file:///srv/svn/publican/trunk@712 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/common/ar-AR/Conventions.po
+++ b/publican/content/common/ar-AR/Conventions.po
@@ -1,12 +1,11 @@
 # Publican conventons.
 # Muayyad Alsadi <alsadi@ojuba.org>, 2009.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Publican 0.44\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2008-12-01 21:39+0000\n"
+"POT-Creation-Date: 2009-04-15 23:41+0000\n"
 "PO-Revision-Date: 2009-03-12 21:39+0000\n"
 "Last-Translator: Muayyad Alsadi <alsadi@ojuba.org>\n"
 "Language-Team: ar <core@ojuba.org>\n"
@@ -26,7 +25,9 @@ msgstr "أعراف الوثيقة"
 msgid ""
 "This manual uses several conventions to highlight certain words and phrases "
 "and draw attention to specific pieces of information."
-msgstr "هذا الكتيب يستخدم عدد من الأعراف لإبراز كلمات أو جملة معينة ولجلب الانتباه لمعلومة معينة."
+msgstr ""
+"هذا الكتيب يستخدم عدد من الأعراف لإبراز كلمات أو جملة معينة ولجلب الانتباه "
+"لمعلومة معينة."
 
 #. Tag: para
 #: Conventions.xml:11
@@ -38,7 +39,12 @@ msgid ""
 "installed on your system. If not, alternative but equivalent typefaces are "
 "displayed. Note: Red Hat Enterprise Linux 5 and later includes the "
 "Liberation Fonts set by default."
-msgstr "	نسخة PDF والنسخة المطبوعة تستخدم خطوط من <ulink url=\"https://fedorahosted.org/liberation-fonts/\">Liberation Fonts</ulink> (لا تدعم العربية). وقد تم تحديدها كي تستخدم في نسخة HTML إن كانت مثبتة على حاسبك. وإلا فإنها تعرض بخطوط بديلة لكن من نفس السمة العامة. ملاحظة: تتوفر هذه الخطوط في ريدهات إنتربرايز لينكس 5."
+msgstr ""
+"\tنسخة PDF والنسخة المطبوعة تستخدم خطوط من <ulink url=\"https://fedorahosted."
+"org/liberation-fonts/\">Liberation Fonts</ulink> (لا تدعم العربية). وقد تم "
+"تحديدها كي تستخدم في نسخة HTML إن كانت مثبتة على حاسبك. وإلا فإنها تعرض "
+"بخطوط بديلة لكن من نفس السمة العامة. ملاحظة: تتوفر هذه الخطوط في ريدهات "
+"إنتربرايز لينكس 5."
 
 #. Tag: title
 #: Conventions.xml:16
@@ -53,7 +59,9 @@ msgid ""
 "Four typographic conventions are used to call attention to specific words "
 "and phrases. These conventions, and the circumstances they apply to, are as "
 "follows."
-msgstr "هناك أربع أعراف طباعية تستخدم في جلب الانتباه لكلمات أو عبارات معينة. إليك تاليا الأعراف والظروف التي تنطبق عليها."
+msgstr ""
+"هناك أربع أعراف طباعية تستخدم في جلب الانتباه لكلمات أو عبارات معينة. إليك "
+"تاليا الأعراف والظروف التي تنطبق عليها."
 
 #. Tag: literal
 #: Conventions.xml:23
@@ -67,93 +75,221 @@ msgstr "ثخين ثابت العرض Mono-spaced Bold"
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight key caps and key-combinations. For example:"
-msgstr "يستخدم في توضيح مدخلات إلى النظام. بما في ذلك الأوامرـ أسماء الملفات والمسارات. كما وتستخدم في إظهار المفاتيح. مثلا:"
+msgstr ""
+"يستخدم في توضيح مدخلات إلى النظام. بما في ذلك الأوامرـ أسماء الملفات "
+"والمسارات. كما وتستخدم في إظهار المفاتيح. مثلا:"
 
-#. Tag: section
-#: Conventions.xml:28
+#. Tag: para
+#: Conventions.xml:31
 #, no-c-format
 msgid ""
-"<blockquote> <para> To see the contents of the file "
-"<filename>my_next_bestselling_novel</filename> in your current working "
-"directory, enter the <command>cat my_next_bestselling_novel</command> "
-"command at the shell prompt and press <keycap>Enter</keycap> to execute the "
-"command. </para> </blockquote> <para> The above includes a file name, a "
-"shell command and a key cap, all presented in Mono-spaced Bold and all "
-"distinguishable thanks to context. </para> <para> Key-combinations can be "
-"distinguished from key caps by the hyphen connecting each part of a key-"
-"combination. For example: </para> <blockquote> <para> Press <keycap>Enter</"
-"keycap> to execute the command. </para> <para> Press <keycombo><keycap>Ctrl</"
-"keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> to switch to the "
-"first virtual terminal. Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</"
-"keycap><keycap>F7</keycap></keycombo> to return to your X-Windows session. </"
-"para> </blockquote> <para> The first sentence highlights the particular key "
-"cap to press. The second highlights two sets of three key caps, each set "
-"pressed simultaneously. </para> <para> If source code is discussed, class "
-"names, methods, functions, variable names and returned values mentioned "
-"within a paragraph will be presented as above, in <literal>Mono-spaced Bold</"
-"literal>. For example: </para> <blockquote> <para> File-related classes "
-"include <classname>filesystem</classname> for file systems, <classname>file</"
-"classname> for files, and <classname>dir</classname> for directories. Each "
-"class has its own associated set of permissions. </para> </blockquote> "
-"<para> <application>Proportional Bold</application> </para> <para> This "
-"denotes words or phrases encountered on a system, including application "
+"To see the contents of the file <filename>my_next_bestselling_novel</"
+"filename> in your current working directory, enter the <command>cat "
+"my_next_bestselling_novel</command> command at the shell prompt and press "
+"<keycap>Enter</keycap> to execute the command."
+msgstr ""
+
+#. Tag: para
+#: Conventions.xml:36
+#, no-c-format
+msgid ""
+"The above includes a file name, a shell command and a key cap, all presented "
+"in Mono-spaced Bold and all distinguishable thanks to context."
+msgstr ""
+
+#. Tag: para
+#: Conventions.xml:39
+#, no-c-format
+msgid ""
+"Key-combinations can be distinguished from key caps by the hyphen connecting "
+"each part of a key-combination. For example:"
+msgstr ""
+
+#. Tag: para
+#: Conventions.xml:44
+#, no-c-format
+msgid "Press <keycap>Enter</keycap> to execute the command."
+msgstr ""
+
+#. Tag: para
+#: Conventions.xml:48
+#, no-c-format
+msgid ""
+"Press <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
+"keycap></keycombo> to switch to the first virtual terminal. Press "
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
+"keycombo> to return to your X-Windows session."
+msgstr ""
+
+#. Tag: para
+#: Conventions.xml:53
+#, no-c-format
+msgid ""
+"The first sentence highlights the particular key cap to press. The second "
+"highlights two sets of three key caps, each set pressed simultaneously."
+msgstr ""
+
+#. Tag: para
+#: Conventions.xml:57
+#, no-c-format
+msgid ""
+"If source code is discussed, class names, methods, functions, variable names "
+"and returned values mentioned within a paragraph will be presented as above, "
+"in <literal>Mono-spaced Bold</literal>. For example:"
+msgstr ""
+
+#. Tag: para
+#: Conventions.xml:62
+#, no-c-format
+msgid ""
+"File-related classes include <classname>filesystem</classname> for file "
+"systems, <classname>file</classname> for files, and <classname>dir</"
+"classname> for directories. Each class has its own associated set of "
+"permissions."
+msgstr ""
+
+#. Tag: application
+#: Conventions.xml:68
+#, no-c-format
+msgid "Proportional Bold"
+msgstr ""
+
+#. Tag: para
+#: Conventions.xml:71
+#, no-c-format
+msgid ""
+"This denotes words or phrases encountered on a system, including application "
 "names; dialogue box text; labelled buttons; check-box and radio button "
-"labels; menu titles and sub-menu titles. For example: </para> <blockquote> "
-"<para> Choose <guimenu>System > Preferences > Mouse</guimenu> from the main "
-"menu bar to launch <application>Mouse Preferences</application>. In the "
+"labels; menu titles and sub-menu titles. For example:"
+msgstr ""
+
+#. Tag: para
+#: Conventions.xml:76
+#, no-c-format
+msgid ""
+"Choose <guimenu>System > Preferences > Mouse</guimenu> from the main menu "
+"bar to launch <application>Mouse Preferences</application>. In the "
 "<guilabel>Buttons</guilabel> tab, click the <guilabel>Left-handed mouse</"
 "guilabel> check box and click <guibutton>Close</guibutton> to switch the "
 "primary mouse button from the left to the right (making the mouse suitable "
-"for use in the left hand). </para> <para> To insert a special character into "
-"a <application>gedit</application> file, choose <guimenu>Applications > "
-"Accessories > Character Map</guimenu> from the main menu bar. Next, choose "
-"<guimenu>Search > Find&hellip;</guimenu> from the <application>Character "
-"Map</application> menu bar, type the name of the character in the "
-"<guilabel>Search</guilabel> field and click <guibutton>Next</guibutton>. The "
-"character you sought will be highlighted in the <guilabel>Character Table</"
-"guilabel>. Double-click this highlighted character to place it in the "
-"<guilabel>Text to copy</guilabel> field and then click the <guibutton>Copy</"
-"guibutton> button. Now switch back to your document and choose <guimenu>Edit "
-"> Paste</guimenu> from the <application>gedit</application> menu bar. </"
-"para> </blockquote> <para> The above text includes application names; system-"
-"wide menu names and items; application-specific menu names; and buttons and "
-"text found within a GUI interface, all presented in Proportional Bold and "
-"all distinguishable by context. </para> <para> Note the <guimenu>></guimenu> "
-"shorthand used to indicate traversal through a menu and its sub-menus. This "
-"is to avoid the difficult-to-follow 'Select <guimenuitem>Mouse</guimenuitem> "
-"from the <guimenu>Preferences</guimenu> sub-menu in the <guimenu>System</"
-"guimenu> menu of the main menu bar' approach. </para> <para> "
+"for use in the left hand)."
+msgstr ""
+
+#. Tag: para
+#: Conventions.xml:80
+#, no-c-format
+msgid ""
+"To insert a special character into a <application>gedit</application> file, "
+"choose <guimenu>Applications > Accessories > Character Map</guimenu> from "
+"the main menu bar. Next, choose <guimenu>Search > Find&hellip;</guimenu> "
+"from the <application>Character Map</application> menu bar, type the name of "
+"the character in the <guilabel>Search</guilabel> field and click "
+"<guibutton>Next</guibutton>. The character you sought will be highlighted in "
+"the <guilabel>Character Table</guilabel>. Double-click this highlighted "
+"character to place it in the <guilabel>Text to copy</guilabel> field and "
+"then click the <guibutton>Copy</guibutton> button. Now switch back to your "
+"document and choose <guimenu>Edit > Paste</guimenu> from the "
+"<application>gedit</application> menu bar."
+msgstr ""
+
+#. Tag: para
+#: Conventions.xml:85
+#, no-c-format
+msgid ""
+"The above text includes application names; system-wide menu names and items; "
+"application-specific menu names; and buttons and text found within a GUI "
+"interface, all presented in Proportional Bold and all distinguishable by "
+"context."
+msgstr ""
+
+#. Tag: para
+#: Conventions.xml:89
+#, no-c-format
+msgid ""
+"Note the <guimenu>></guimenu> shorthand used to indicate traversal through a "
+"menu and its sub-menus. This is to avoid the difficult-to-follow 'Select "
+"<guimenuitem>Mouse</guimenuitem> from the <guimenu>Preferences</guimenu> sub-"
+"menu in the <guimenu>System</guimenu> menu of the main menu bar' approach."
+msgstr ""
+
+#. Tag: para
+#: Conventions.xml:93
+#, no-c-format
+msgid ""
 "<command><replaceable>Mono-spaced Bold Italic</replaceable></command> or "
 "<application><replaceable>Proportional Bold Italic</replaceable></"
-"application> </para> <para> Whether Mono-spaced Bold or Proportional Bold, "
-"the addition of Italics indicates replaceable or variable text. Italics "
-"denotes text you do not input literally or displayed text that changes "
-"depending on circumstance. For example: </para> <blockquote> <para> To "
-"connect to a remote machine using ssh, type <command>ssh "
+"application>"
+msgstr ""
+
+#. Tag: para
+#: Conventions.xml:97
+#, no-c-format
+msgid ""
+"Whether Mono-spaced Bold or Proportional Bold, the addition of Italics "
+"indicates replaceable or variable text. Italics denotes text you do not "
+"input literally or displayed text that changes depending on circumstance. "
+"For example:"
+msgstr ""
+
+#. Tag: para
+#: Conventions.xml:102
+#, no-c-format
+msgid ""
+"To connect to a remote machine using ssh, type <command>ssh "
 "<replaceable>username</replaceable>@<replaceable>domain.name</replaceable></"
 "command> at a shell prompt. If the remote machine is <filename>example.com</"
 "filename> and your username on that machine is john, type <command>ssh "
-"john@example.com</command>. </para> <para> The <command>mount -o remount "
-"<replaceable>file-system</replaceable></command> command remounts the named "
-"file system. For example, to remount the <filename>/home</filename> file "
-"system, the command is <command>mount -o remount /home</command>. </para> "
-"<para> To see the version of a currently installed package, use the "
-"<command>rpm -q <replaceable>package</replaceable></command> command. It "
-"will return a result as follows: <command><replaceable>package-version-"
-"release</replaceable></command>. </para> </blockquote> <para> Note the words "
-"in bold italics above &mdash; username, domain.name, file-system, package, "
-"version and release. Each word is a placeholder, either for text you enter "
-"when issuing a command or for text displayed by the system. </para> <para> "
+"john@example.com</command>."
+msgstr ""
+
+#. Tag: para
+#: Conventions.xml:106
+#, no-c-format
+msgid ""
+"The <command>mount -o remount <replaceable>file-system</replaceable></"
+"command> command remounts the named file system. For example, to remount the "
+"<filename>/home</filename> file system, the command is <command>mount -o "
+"remount /home</command>."
+msgstr ""
+
+#. Tag: para
+#: Conventions.xml:110
+#, no-c-format
+msgid ""
+"To see the version of a currently installed package, use the <command>rpm -q "
+"<replaceable>package</replaceable></command> command. It will return a "
+"result as follows: <command><replaceable>package-version-release</"
+"replaceable></command>."
+msgstr ""
+
+#. Tag: para
+#: Conventions.xml:115
+#, no-c-format
+msgid ""
+"Note the words in bold italics above &mdash; username, domain.name, file-"
+"system, package, version and release. Each word is a placeholder, either for "
+"text you enter when issuing a command or for text displayed by the system."
+msgstr ""
+
+#. Tag: para
+#: Conventions.xml:119
+#, no-c-format
+msgid ""
 "Aside from standard usage for presenting the title of a work, italics "
-"denotes the first use of a new and important term. For example: </para> "
-"<blockquote> <para> When the Apache HTTP Server accepts requests, it "
-"dispatches child processes or threads to handle them. This group of child "
-"processes or threads is known as a <firstterm>server-pool</firstterm>. Under "
-"Apache HTTP Server 2.0, the responsibility for creating and maintaining "
-"these server-pools has been abstracted to a group of modules called "
-"<firstterm>Multi-Processing Modules</firstterm> (<firstterm>MPMs</"
-"firstterm>). Unlike other modules, only one module from the MPM group can be "
-"loaded by the Apache HTTP Server. </para> </blockquote>"
+"denotes the first use of a new and important term. For example:"
+msgstr ""
+
+#. Tag: para
+#: Conventions.xml:124
+#, no-c-format
+msgid ""
+"When the Apache HTTP Server accepts requests, it dispatches child processes "
+"or threads to handle them. This group of child processes or threads is known "
+"as a <firstterm>server-pool</firstterm>. Under Apache HTTP Server 2.0, the "
+"responsibility for creating and maintaining these server-pools has been "
+"abstracted to a group of modules called <firstterm>Multi-Processing Modules</"
+"firstterm> (<firstterm>MPMs</firstterm>). Unlike other modules, only one "
+"module from the MPM group can be loaded by the Apache HTTP Server."
 msgstr ""
 
 #. Tag: title
@@ -232,7 +368,9 @@ msgstr "الملاحظات والتحذيرات"
 msgid ""
 "Finally, we use three visual styles to draw attention to information that "
 "might otherwise be overlooked."
-msgstr "أخيرا، نستخدم ثلاث تنسيقات مرئية لجلب الانتباه إلى المعلومات التي قد تخطؤها العين."
+msgstr ""
+"أخيرا، نستخدم ثلاث تنسيقات مرئية لجلب الانتباه إلى المعلومات التي قد تخطؤها "
+"العين."
 
 #. Tag: title
 #: Conventions.xml:160
@@ -244,11 +382,13 @@ msgstr "ملاحظة"
 #: Conventions.xml:161
 #, no-c-format
 msgid ""
-"A note is a tip or shortcut or alternative approach to the task at hand. "
+"A Note is a tip or shortcut or alternative approach to the task at hand. "
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
-msgstr "الملاحظة هي تلميح أو اختصار أو طريقة بديلة للقيام بالمهمة التي بين أيدينا"
-"اهمال هكذا ملاحظة ليس له نتائج سلبية لكن قد تفوتك حيلة تجعل حياتك أكثر سهولة."
+msgstr ""
+"الملاحظة هي تلميح أو اختصار أو طريقة بديلة للقيام بالمهمة التي بين "
+"أيدينااهمال هكذا ملاحظة ليس له نتائج سلبية لكن قد تفوتك حيلة تجعل حياتك أكثر "
+"سهولة."
 
 #. Tag: title
 #: Conventions.xml:167
@@ -264,7 +404,10 @@ msgid ""
 "that only apply to the current session, or services that need restarting "
 "before an update will apply. Ignoring Important boxes won't cause data loss "
 "but may cause irritation and frustration."
-msgstr "الصناديق المهمة  تفصل أشياء يخطؤ من يغفلها كان يكون التغيير لا ينطبق إلا على الجلسة الحالية أو أن تحتاج الخدمة إلى إعادة تشغيل حتى تطبق التغييرات. إغفال الصناديق المهمة لن يؤدي إلى فقدان بيانات لكنه قد يؤدي إلى مضايقة وسخط."
+msgstr ""
+"الصناديق المهمة  تفصل أشياء يخطؤ من يغفلها كان يكون التغيير لا ينطبق إلا على "
+"الجلسة الحالية أو أن تحتاج الخدمة إلى إعادة تشغيل حتى تطبق التغييرات. إغفال "
+"الصناديق المهمة لن يؤدي إلى فقدان بيانات لكنه قد يؤدي إلى مضايقة وسخط."
 
 #. Tag: title
 #: Conventions.xml:175
@@ -279,5 +422,3 @@ msgid ""
 "A Warning should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
 msgstr "يجب أن لا نهمل التحذيرات. إهمالها غالبا ما يؤدي إلى خسارة بيانات."
-
-
