--- a/publican/content/common/es-ES/Feedback.po
+++ b/publican/content/common/es-ES/Feedback.po
@@ -6,13 +6,14 @@ msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2008-01-02 06:17+0000\n"
-"PO-Revision-Date: 2008-10-02 14:52+1000\n"
-"Last-Translator: Gladys Guerrero Lozano <gguerrer@redhat.com>\n"
-"Language-Team: Spanish <fedora-trans-es@redhat.com>\n"
+"PO-Revision-Date: 2009-03-23 21:59-0300\n"
+"Last-Translator: Domingo Becker <domingobecker@gmail.com>\n"
+"Language-Team: Fedora Spanish <fedora-trans-es@redhat.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
+"X-Poedit-Language: Spanish\n"
 
 #. Tag: title
 #: Feedback.xml:6
@@ -36,5 +37,5 @@ msgstr "información de contacto para este manual"
 #: Feedback.xml:11
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
-msgstr "Usted debe anular este archivo de comentarios creando su propio archivo local Feedback.xml."
+msgstr "Debe sobrescribir este archivo de comentarios creando su propio archivo local Feedback.xml."
 
