Update CHANGES files for new translations
git-svn-id: file:///srv/svn/publican/trunk@717 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/CHANGES
+++ b/publican-fedora/CHANGES
@@ -1,3 +1,21 @@
+- Sun Apr 19 2009 Manatsawin Hanmongkolchai <manatsawin@gmail.com>
+- Translate Fedora Feedback into Thai
+
+- Thu Apr 16 2009 Sveinn í Felli <sveinki@nett.is>
+- Translate Fedora Feedback into Icelandic
+
+- Wed Apr 08 2009 Sulyok Peti <sulyokpeti@gmail.com>
+- Translate Fedora Feedback into Hungarian
+
+- Mon Mar 23 2009 Göran Uddeborg <goeran@uddeborg.se>
+- Translate Fedora Feedback into Swedish
+
+- Fri Mar 20 2009  Noriko Mizumoto <noriko@redhat.com> 
+- Update Fedora Feedback in Japanese
+
+- Thu Mar 19 2009 Kris Thomsen <lakristho@gmail.com>
+- Translate Fedora Feedback into Danish
+
 - Tue Mar 10 2009 Alexey Vasyukov <vasyukov@vdel.com>
 - Translate Fedora Feedback into Russian
 
