--- a/publican/CHANGES
+++ b/publican/CHANGES
@@ -1,3 +1,26 @@
+- Thu Apr 23 2009 Sveinn í Felli <sveinki@nett.is>
+- Translate Document Conventions into Icelandic
+
+- Sun Apr 19 2009 Manatsawin Hanmongkolchai <manatsawin@gmail.com>
+- Translate Document Conventions into Thai
+
+- Wed Apr 08 2009 Sulyok Peti <sulyokpeti@gmail.com>
+- Translate Document Conventions into Hungarian
+
+- Sat Mar 28 2009 Göran Uddeborg <goeran@uddeborg.se>
+- Translate Document Conventions into Swedish
+
+- Tue Mar 24 2009 Domingo Becker <domingobecker@gmail.com>
+- Update Document Conventions and Feedback in Spanish
+
+- Tue Mar 24 2009  Noriko Mizumoto <noriko@redhat.com> 
+- Update Document Conventions in Japanese
+
+- Fri Mar 20 2009  Noriko Mizumoto <noriko@redhat.com> 
+- Update Feedback in Japanese
+
+- Thu Mar 19 2009 Kris Thomsen <lakristho@gmail.com>
+- Translate Document Conventions into Danish
+
 - Wed Mar 11 2009 Miloš Komarčević <kmilos@gmail.com>
 - Translate Document Conventions into Serbian (Cyrillic and Latin alphabets)
-
