Add Bosnian translations by Arnes Arnautović
git-svn-id: file:///srv/svn/publican/trunk@719 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/CHANGES
+++ b/publican-fedora/CHANGES
@@ -1,3 +1,6 @@
+- Fri May 08 2009 Arnes Arnautović <arnes99@gmail.com>
+- Translate Fedora Feedback into Bosnian
+
 - Sun Apr 19 2009 Manatsawin Hanmongkolchai <manatsawin@gmail.com>
 - Translate Fedora Feedback into Thai
 
