--- a/publican/CHANGES
+++ b/publican/CHANGES
@@ -1,3 +1,6 @@
+- Fri May 08 2009 Arnes Arnautović <arnes99@gmail.com>
+- Translate Document Conventions into Bosnian
+
 - Thu Apr 23 2009 Sveinn í Felli <sveinki@nett.is>
 - Translate Document Conventions into Icelandic
 
