Amendment to Bosnian translation by Arnes Arnautović
git-svn-id: file:///srv/svn/publican/trunk@720 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/common/bs-BA/Conventions.po
+++ b/publican/content/common/bs-BA/Conventions.po
@@ -413,8 +413,8 @@ msgid ""
 "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
 "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
 msgstr ""
-"books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
-"books_tests  Desktop1  downloads      images  notes  scripts  svgs"
+"knjige        Radna_Površina   dokumentacija  draftovi  mss    fotografije   stvari  svn\n"
+"knjige_testovi  Radna_Površina1  snimljeno      slike  bilješke  skripte  svg-ovi"
 
 #. Tag: para
 #: Conventions.xml:144
