Slovak translations of common content sections by Pavol Šimo
git-svn-id: file:///srv/svn/publican/trunk@721 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/CHANGES
+++ b/publican-fedora/CHANGES
@@ -1,3 +1,6 @@
+- Sun May 10 2009 Pavol Šimo <palo.simo@gmail.com>
+- Translate Fedora Feedback into Slovak 
+
 - Fri May 08 2009 Arnes Arnautović <arnes99@gmail.com>
 - Translate Fedora Feedback into Bosnian
 
