--- a/publican/CHANGES
+++ b/publican/CHANGES
@@ -1,3 +1,6 @@
+- Sun May 10 2009 Pavol Šimo <palo.simo@gmail.com>
+- Translate Document Conventions into Slovak 
+
 - Fri May 08 2009 Arnes Arnautović <arnes99@gmail.com>
 - Translate Document Conventions into Bosnian
 
