Corrections to Conventions in Slovak by Pavol Šimo
git-svn-id: file:///srv/svn/publican/trunk@722 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/content/common/sk-SK/Conventions.po
+++ b/publican/content/common/sk-SK/Conventions.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: Publican\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-04-15 23:41+0000\n"
-"PO-Revision-Date: 2009-05-10 17:28+0200\n"
+"PO-Revision-Date: 2009-05-11 08:28+0200\n"
 "Last-Translator: Pavol Šimo <palo.simo@gmail.com>\n"
 "Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
 "MIME-Version: 1.0\n"
@@ -26,8 +26,8 @@ msgid ""
 "This manual uses several conventions to highlight certain words and phrases "
 "and draw attention to specific pieces of information."
 msgstr ""
-"V tomto manuále je použitých niekoľko konvencií na zvýraznenie istých slov a "
-"fráz a upozornenie na špecifické kúsky informácií."
+"V tomto manuále je na zvýraznenie istých slov a fráz a upozornenie na "
+"špecifické kúsky informácií použitých niekoľko konvencií."
 
 #. Tag: para
 #: Conventions.xml:11
@@ -40,13 +40,13 @@ msgid ""
 "displayed. Note: Red Hat Enterprise Linux 5 and later includes the "
 "Liberation Fonts set by default."
 msgstr ""
-"V PDF a papierových vydaniach sú v tomto manuále použité typy písma "
-"vykresľované pomocou súpravy písem <ulink url=\"https://fedorahosted.org/"
+"V PDF a v papierových vydaniach sú v tomto manuále použité typy písma "
+"vykresľované pomocou súpravy písiem <ulink url=\"https://fedorahosted.org/"
 "liberation-fonts/\">Liberation Fonts</ulink>. Tie isté písma sú použité tiež "
 "v HTML vydaniach v prípade, že sú vo vašom sýsteme nainštalované. Ak nie sú, "
-"budú použité alternatívne, ale obdobné typy písma. Poznámka: Red Hat "
-"Enterprise Linux 5 a novšie vydania obsahujú množinu písem Liberation Fonts "
-"predvolene."
+"budú použité alternatívne, ale rovnocenné typy písma. Poznámka: Red Hat "
+"Enterprise Linux 5 a novšie vydania už predvolene obsahujú množinu písem "
+"Liberation Fonts."
 
 #. Tag: title
 #: Conventions.xml:16
@@ -62,8 +62,8 @@ msgid ""
 "and phrases. These conventions, and the circumstances they apply to, are as "
 "follows."
 msgstr ""
-"Na zvýraznenie špecifických slov a fráz sú použité 4 konvencie. Tieto "
-"konvencie a prípady, kedy sú použité, nasledujú."
+"Na zvýraznenie špecifických slov a fráz sú použité 4 konvencie. Nasledujú "
+"tieto konvencie a prípady, kedy sú použité, nasledujú."
 
 #. Tag: literal
 #: Conventions.xml:23
@@ -114,14 +114,14 @@ msgid ""
 "Key-combinations can be distinguished from key caps by the hyphen connecting "
 "each part of a key-combination. For example:"
 msgstr ""
-"Kombinácie kláves sa odlíšujú od klávesových kombinácií spojovníkom, ktrý "
+"Kombinácie kláves sa odlišujú od klávesových kombinácií spojovníkom, ktorý "
 "spája všetky časti klávesovej kombinácie. Napríklad:"
 
 #. Tag: para
 #: Conventions.xml:44
 #, no-c-format
 msgid "Press <keycap>Enter</keycap> to execute the command."
-msgstr "Stlačte <keycap>Enter</keycap> na vykonanie príkazu."
+msgstr "Na vykonanie príkazu stlačte <keycap>Enter</keycap>."
 
 #. Tag: para
 #: Conventions.xml:48
@@ -132,7 +132,7 @@ msgid ""
 "<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"Stlačte <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F+</"
+"Stlačte <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
 "keycap></keycombo> na prepnutie do prvého virtuálneho terminálu. Stlačte "
 "<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
 "keycombo> pre návrat do vašej relácie X-Windows."
@@ -144,8 +144,8 @@ msgid ""
 "The first sentence highlights the particular key cap to press. The second "
 "highlights two sets of three key caps, each set pressed simultaneously."
 msgstr ""
-"Prvá veta zvýrazňuje konkrétnu klávesu na stlačenie. Druhá popisuje dve sady "
-"po tri klávesy, každú sadu je potrebné stlačiť súčasne."
+"Prvá veta zvýrazňuje konkrétny kláves na stlačenie. Druhá popisuje dve sady "
+"po tri klávesy, každú sadu je potrebné stlačiť spoločne."
 
 #. Tag: para
 #: Conventions.xml:57
@@ -169,7 +169,7 @@ msgid ""
 "classname> for directories. Each class has its own associated set of "
 "permissions."
 msgstr ""
-"Triedy spojené so súbormi obsahujú <classname>filesystem</classname> pre "
+"Kategórie spojené so súbormi obsahujú <classname>filesystem</classname> pre "
 "súborové systémy, <classname>file</classname> pre súbory a <classname>dir</"
 "classname> pre priečinky. Každá trieda má vlastnú priradenú sadu práv."
 
@@ -187,8 +187,8 @@ msgid ""
 "names; dialogue box text; labelled buttons; check-box and radio button "
 "labels; menu titles and sub-menu titles. For example:"
 msgstr ""
-"Toto označuje slová alebo frázy na ktoré je možné naraziť v systéme, vrátane "
-"názvov aplikácií; text v dialógovom okne; popisky tlačidiel; popisky "
+"Toto označuje slová alebo frázy, na ktoré je možné naraziť v systéme, vrátane: "
+"názvy aplikácií; text v dialógovom okne; popisky tlačidiel; popisky "
 "zaškrtávacích a prepínacích tlačidiel; názvy ponúk a podponúk. Napríklad:"
 
 #. Tag: para
@@ -224,7 +224,7 @@ msgid ""
 "document and choose <guimenu>Edit > Paste</guimenu> from the "
 "<application>gedit</application> menu bar."
 msgstr ""
-"Na vloženie špeciálneho znaku súboru v <application>gedit</application> si "
+"Na vloženie špeciálneho znaku do súboru v <application>gedit</application> si "
 "z hlavnej ponuky zvoľte <guimenu>Aplikácie > Príslušenstvo > Mapa znakov</"
 "guimenu>. Ďalej si z ponuky aplikácie <application>Mapa znakov</application> "
 "zvoľte <guimenu>Hľadať > Nájsť</guimenu>, zadajte názov znaku do políčka "
@@ -353,8 +353,8 @@ msgid ""
 "Aside from standard usage for presenting the title of a work, italics "
 "denotes the first use of a new and important term. For example:"
 msgstr ""
-"Bokom od bežného využitia na zobrazenie nadpisu práce, kurzíva označuje "
-"prvé použitie nového a dôležitého výrazu. Napríklad:"
+"Výnimkou z bežného využitia na zobrazenie nadpisu práce je, že kurzíva "
+"označuje prvé použitie nového a dôležitého výrazu. Napríklad:"
 
 #. Tag: para
 #: Conventions.xml:124
@@ -400,7 +400,7 @@ msgid ""
 "computeroutput> and presented thus:"
 msgstr ""
 "Výstup odoslaný na terminál je vysádzaný <computeroutput>"
-"neproporcionálnym rímskym</computeroutput> písmom, takže je zobrazený:"
+"neproporcionálnym rímskym</computeroutput> písmom, takže zobrazené je:"
 
 #. Tag: screen
 #: Conventions.xml:142
@@ -498,8 +498,8 @@ msgid ""
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
 msgstr ""
-"Poznámka je rada alebo ťahák alebo alternatívny spôsob pre úlohu, ktorý je "
-"vždy poruke. Ignorovanie poznámky by nemalo mať negatívne dúsledky, ale môžete "
+"Poznámka je rada, ťahák alebo alternatívny spôsob pre úlohu, ktorý je vždy "
+"poruke. Ignorovanie poznámky by nemalo mať negatívne dúsledky, ale môžete "
 "tým prešvihnúť trik, ktorý by vám uľahčil život."
 
 #. Tag: title
