add Czech translations by Nikola Štohanzl
git-svn-id: file:///srv/svn/publican/trunk@726 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/CHANGES
+++ b/publican-fedora/CHANGES
@@ -1,3 +1,6 @@
+- Mon May 25 2009 Nikola Štohanzl <niko@srnet.cz>
+- Translate Fedora Feedback into Czech
+
 - Sun May 10 2009 Pavol Šimo <palo.simo@gmail.com>
 - Translate Fedora Feedback into Slovak 
 
