--- a/publican/CHANGES
+++ b/publican/CHANGES
@@ -1,3 +1,6 @@
+- Wed May 27 2009 Nikola Štohanzl <niko@srnet.cz>
+- Translate Document Conventions into Czech
+
 - Sun May 10 2009 Pavol Šimo <palo.simo@gmail.com>
 - Translate Document Conventions into Slovak 
 
