Latvian translations by Jurijs Kolomijecs
git-svn-id: file:///srv/svn/publican/trunk@730 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/lv-LV/Feedback.po
+++ b/publican-fedora/lv-LV/Feedback.po
@@ -1,40 +1,72 @@
+# Translation of Feedback.po to Latvian
+# Jurijs Kolomijecs <admin@irben.id.lv>, 2009.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2007-11-05 08:09+1000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Project-Id-Version: publican-fedora\n"
+"Report-Msgid-Bugs-To: http://bugs.kde.org\n"
+"POT-Creation-Date: 2009-04-15 23:41+0000\n"
+"PO-Revision-Date: 2009-06-01 05:24+0\n"
+"Last-Translator: Jurijs Kolomijecs <admin@irben.id.lv>\n"
+"Language-Team: Latvian <kde-i18n-doc@kde.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: application/x-xml2pot; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: ./Feedback.xml:6(title) 
+#. Tag: title
+#: Feedback.xml:6
+#, no-c-format
 msgid "We Need Feedback!"
-msgstr ""
+msgstr "Mums vajag atbalsi!"
 
-#: ./Feedback.xml:8(primary) 
+#. Tag: primary
+#: Feedback.xml:8
+#, no-c-format
 msgid "feedback"
-msgstr ""
+msgstr "atbalss"
 
-#: ./Feedback.xml:9(secondary) 
+#. Tag: secondary
+#: Feedback.xml:9
+#, no-c-format
 msgid "contact information for this manual"
-msgstr ""
+msgstr "kontaktinformācija šai vadībai"
 
-#: ./Feedback.xml:11(para) 
-msgid "If you find a typographical error in this manual, or if you have thought of a way to make this manual better, we would love to hear from you! Please submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product <application>&PRODUCT;.</application>"
+#. Tag: para
+#: Feedback.xml:11
+#, no-c-format
+msgid ""
+"If you find a typographical error in this manual, or if you have thought of "
+"a way to make this manual better, we would love to hear from you! Please "
+"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
+"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
+"<application>&PRODUCT;.</application>"
 msgstr ""
+"Ja Jūs atradat tipografisko kļūdu šajā vadībā vai Jums ir idejas, "
+"kā šo dokumentu uzlabot, mēs ar prieku izklausītos Jūs! Lūdzam "
+"aizsūtiet ziņu uz Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
+"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> par produktu "
+"<application>&PRODUCT;.</application>"
 
-#: ./Feedback.xml:16(para) 
-msgid "When submitting a bug report, be sure to mention the manual's identifier: <citetitle>&BOOKID;</citetitle>"
+#. Tag: para
+#: Feedback.xml:16
+#, no-c-format
+msgid ""
+"When submitting a bug report, be sure to mention the manual's identifier: "
+"<citetitle>&BOOKID;</citetitle>"
 msgstr ""
+"Kad sūtat kļūdas ziņojumu, neaizmirsiet norādīt vadības identifikatoru: "
+"<citetitle>&BOOKID;</citetitle>"
 
-#: ./Feedback.xml:20(para) 
-msgid "If you have a suggestion for improving the documentation, try to be as specific as possible when describing it. If you have found an error, please include the section number and some of the surrounding text so we can find it easily."
+#. Tag: para
+#: Feedback.xml:20
+#, no-c-format
+msgid ""
+"If you have a suggestion for improving the documentation, try to be as "
+"specific as possible when describing it. If you have found an error, please "
+"include the section number and some of the surrounding text so we can find "
+"it easily."
 msgstr ""
-
-#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
-#: ./Feedback.xml:0(None) 
-msgid "translator-credits"
-msgstr ""
-
+"Ja Jums ir idejas kā uzlabot dokumentāciju, mēģiniet būt "
+"specifiskam kad aprakstiet to. Ja Jūs atradat kļūdu, lūdzam "
+"ierakstīt sekcijas numuru un kādu apkārtējo tekstu lai mēs varētu vieglāk "
+"to atrast."
