--- a/publican/CHANGES
+++ b/publican/CHANGES
@@ -1,3 +1,6 @@
+- Thu Jun 04 2009 Jurijs Kolomijecs <admin@irben.id.lv>
+- Translate Document Conventions into Latvian
+
 - Wed May 27 2009 Nikola Štohanzl <niko@srnet.cz>
 - Translate Document Conventions into Czech
 
