--- a/publican-fedora/CHANGES
+++ b/publican-fedora/CHANGES
@@ -1,3 +1,6 @@
+- Thu Jun 04 2009 Jurijs Kolomijecs <admin@irben.id.lv>
+- Translate Fedora Feedback into Latvian
+
 - Mon May 25 2009 Nikola Štohanzl <niko@srnet.cz>
 - Translate Fedora Feedback into Czech
 
